pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rancher-pod1
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 8080
          hostPort: 8177
